fixes circle stuck

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 }
 canvas {
-	border: 2px solid black;
+	border: 1px solid black;
 }
 
 .viewport{
